@@ -3,6 +3,7 @@ Version CVS
 * code cleaned up
 * Ackley as a default function for the interface
 * a new base class for every objects that can be put in a itsSet
+* binary operators for points, and faster sorting for containers
 
 Version 0.2.4
 * use clean exception management
